fix: generator variables for test (#3)

--- a/provision/generators/plop/templates/test/variables.add.hbs
+++ b/provision/generators/plop/templates/test/variables.add.hbs
@@ -1,11 +1,14 @@
-variable "email" {
-  type = string
+variable "name" {
+  type        = string
+  description = "name of user"
 }
 
-variable "name" {
-  type = string
+variable "email" {
+  type        = string
+  description = "email of user"
 }
 
 variable "mobile" {
-  type = string
+  type        = string
+  description = "nro mobile of user"
 }
